# correlation-lib

./: .gitignore  README.md  audit-cycle1-report.json  pyproject.toml  state.md
correlation_lib/: __init__.py  diagnostics.py  engine.py  enricher.py  interfaces.py  lifecycle.py  matcher.py  rule_provider.py  rules.py  tracker.py
correlation_lib_adapters/: __init__.py
correlation_lib_adapters/hermes/: __init__.py  adapter.py  backends.py  composition_provider.py
docs/: MEMORY_PROVIDER_CHAINING_RESEARCH.md
examples/: demo.py  example_rules.json
tests/: test_e2e.py  test_enricher.py  test_lifecycle.py  test_matcher.py  test_rules.py  test_tracker.py
