[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "correlation-lib"
version = "0.2.0"
description = "Agent-agnostic rule-based context enrichment engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ether-btc", email = "ether@btc.io" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
hermes = [
    "hermes-agent>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["correlation_lib", "correlation_lib_adapters", "correlation_lib_adapters.hermes"]

[tool.hatch.build.targets.sdist]
include = ["correlation_lib", "correlation_lib_adapters"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"